Migrate from assertj to JUnit Jupiter